# rust-contests

./: .gitignore  Cargo.toml  README.md  runner-debug.sh  runner.sh
.github/workflows/: rust.yml
a_topology_aware_vmplacement/src/: empty_solver.rs  fake_solver.rs  graph_solver.rs  greedy_solver.rs  main.rs  meta_solver.rs  random_solver.rs  solver.rs  state.rs  types.rs
algo_lib/: Cargo.toml
algo_lib/src/: lib.rs
algo_lib/src/collections/: array_2d.rs  bit_set.rs  bit_set_fixed_size.rs  fx_hash_map.rs  id_map.rs  index_of.rs  inversions_count.rs  last_exn.rs  min_priority_queue.rs  mod.rs  multiset.rs  partial_cmp.rs  peek_random.rs  permutation.rs  prependable_vector.rs  random_bag.rs  resettable_array.rs  rev_permutation.rs  reversed.rs  shuffled.rs  sorted.rs  sparse_table.rs  sparse_table_gcd.rs  sparse_table_max.rs  sparse_table_min.rs  sparse_table_test.rs  sqrt_decomposition.rs  sqrt_decomposition_example.rs  sqrt_decomposition_test.rs  value_to_positions.rs
algo_lib/src/flows/: dinic.rs  (+5 more)
hash-code-test/: Cargo.toml  build.rs
hash-code-test/src/: client.rs  main.rs  tester.rs
main/: Cargo.toml
main/src/: main.rs
marathon_utils/: Cargo.toml
marathon_utils/src/: distribution_stat.rs  dynamic_plot.rs  hashcode_solver.rs  html_merger.rs  html_report.rs  lib.rs  plotlib_wrappers.rs  plotters_wrappers.rs  sa_report.rs
templates/: Cargo.toml  main.rs  multi_eof.rs  multi_number.rs  single.rs  tester.rs
templates/main/: file_in.rs  file_out.rs  main.rs  stdin.rs  stdout.rs
templates/sites/: atcoder.rs  default.rs  facebook.rs  google.rs  meta.rs
(+1052 files in other folders)
