[package]
name = "hash-code-test"
version = "0.1.0"
edition = "2021"

[dependencies]
algo_lib = { path = "../algo_lib" }
marathon_utils = { path = "../marathon_utils" }

image = "0.24.0"
plotlib = "0.5.1"

[build-dependencies]
rust_competitive_helper_util = {path = "../../rust-competitive-helper/rust-competitive-helper-util"}
