[package]
name = "$TASK"
version = "0.1.0"
edition = "2021"

[dependencies]
algo_lib = { path = "../../algo_lib" }

[build-dependencies]
# rust_competitive_helper_util = {git = "https://github.com/rust-competitive-helper/rust-competitive-helper"}
rust_competitive_helper_util = { path = "../../../rust-competitive-helper/rust-competitive-helper-util" }


[features]
local = []
default = ["local"]
